--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.25.2)
 
+file(COPY ${CMAKE_CURRENT_LIST_DIR}/assets DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+
+
 add_executable(worms)
 target_link_libraries(worms PUBLIC
     project_options
